Add pip upgraded

--- a/buildspec.yml
+++ b/buildspec.yml
@@ -5,6 +5,7 @@ phases:
       python: 3.8
   pre_build:
     commands:
+      - python -m pip install --upgrade pip
       - pip install -r requirements.txt
       - python src/app_test.py
   build:
