--- a/terraform/dms/deploy/appspec.yaml
+++ b/terraform/dms/deploy/appspec.yaml
@@ -5,5 +5,5 @@ Resources:
       Properties:
         TaskDefinition: <TASK_DEFINITION>
         LoadBalancerInfo:
-          ContainerName: "deploy"
+          ContainerName: "dms"
           ContainerPort: 8080
